Camera2 for API 21 and above
=> Created a new camera activity class for using camera2 hardware that replaces the deprecated camera hardware available from API 21.
=> Added a check to launch camera vs camera2 based on the API level at runtime.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">AndroidManChild</string>
     <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    <string name="button_launch_camera">Camera</string>
     <string name="button_image_capture">Snapshot</string>
     <string name="button_video_capture">Video</string>
 </resources>
