Capture Video Functionality
=> Added capture video functionality for custom camera 2.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="camera_error">This device doesn\'t support Camera.</string>
     <string name="title_activity_display_custom_camera2">DisplayCustomCamera2Activity</string>
     <string name="action_settings">Settings</string>
+    <string name="record">Record</string>
+    <string name="stop">Stop</string>
 </resources>
