--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="action_settings">Settings</string>
     <string name="record">Record</string>
     <string name="stop">Stop</string>
+    <string name="buffering">Buffering...</string>
 </resources>
